# bro-pm

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
docs/architecture/: adr-log.md  audit-and-rollback-spec.md  domain-model-spec.md  execution-contracts-spec.md  integrations-spec.md  policy-trust-security-spec.md  system-architecture-spec.md
docs/operations/: pilot-rollout-plan.md
docs/planning/: delivery-backlog-and-epic-breakdown.md
docs/product/: boss-admin-command-interface-spec.md  learning-and-heuristics-spec.md  onboarding-launch-page-spec.md  project-onboarding-spec.md  reporting-and-notion-ia-spec.md
docs/quality/: test-strategy-and-safety-validation-plan.md
src/bro_pm/: __init__.py  config.py  database.py  models.py  policy.py  schemas.py
src/bro_pm/adapters/: hermes_runtime.py
src/bro_pm/api/: app.py  ui.py
src/bro_pm/integrations/: __init__.py  yandex_tracker.py
src/bro_pm/services/: command_service.py  execution_outbox_service.py  gateway_service.py  planning_state.py  (+6 more)
tests/: conftest.py  test_api.py  test_api_project_runtime_status.py  test_autonomy_state.py  test_database.py  test_decision_timer.py  test_execution_outbox.py  test_execution_outbox_contract.py  test_gateway_due_actions.py  test_gateway_inbound_events.py  test_mvp_e2e_flow.py  test_onboarding_web_ui.py  test_planner_service.py  test_policy_adapter_command_service.py  test_project_onboarding_api.py  test_project_runtime_status_service.py  test_report_scheduler.py  test_reporting_service.py  test_yandex_tracker_integration.py
(+4 files in other folders)
